# slm

./: .gitignore  IDEAS.md  README.md  chat.py  download.py  hardware.md  main.py  pyproject.toml  upload.py
datamodules/: __init__.py  tiny_stories.py  wikitext2.py  wikitext2tokenizer.py
experiments/: gpt_neo_babylm.py  gpt_neo_tiny_stories.py  gpt_neo_wikitext2.py  simple_transformer_wikitext2.py
models/: __init__.py  gpt_neo.py  simple_transformer.py  transformer.py
