[project]
name = "slm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.2",
    "lightning>=2.6.0",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
	"tensorboard>=2.20.0",
]
